# witchbooru

./: .gitignore  200.html  Cargo.toml  LICENSE  README.md  bundle.8dfa7.esm.js  bundle.8dfa7.esm.js.map  bundle.a680f.js  bundle.a680f.js.map  bundle.c242f.css  docker-compose.yml  index.html  polyfills.1c46d.js  polyfills.1c46d.js.map  polyfills.62f33.esm.js  polyfills.62f33.esm.js.map  push-manifest.json  route-home.chunk.8309b.esm.js  route-home.chunk.8309b.esm.js.map  route-home.chunk.c2a61.js  route-home.chunk.c2a61.js.map  route-result.chunk.c2fd3.js  route-result.chunk.c2fd3.js.map  route-result.chunk.e5cc8.css  route-result.chunk.f4505.esm.js  route-result.chunk.f4505.esm.js.map  sw-esm.js  sw-esm.js.map  template.yaml
.github/workflows/: build.yml  deploy.yml
benches/: predict.rs
frontend/: .env.sample  .eslintrc.js  .gitignore  .prettierignore  README.md  package-lock.json  package.json  preact.config.js  prerender-urls.json  tsconfig.json
frontend/src/: .babelrc  baseroute.ts  index.css  index.ts  manifest.json  template.html
frontend/src/components/: app.tsx  github-corner.tsx
frontend/src/routes/: home.tsx  result.tsx
result/: index.html  preact_prerender_data.json
scripts/: Pipfile  README.md  get_tag_mappings.py  keras2onnx.py  list_characters.py  train.py
src/: classifier.rs  lib.rs  models.rs  topk.rs
src/models/: naive_bayes.rs  neural_net.rs
ssr-build/: ssr-bundle.f5571.css  ssr-bundle.f5571.css.map  ssr-bundle.js  ssr-bundle.js.map
witchbooru-cli/: Cargo.toml
witchbooru-cli/src/: format.rs  main.rs
witchbooru-lambda/: Cargo.toml
witchbooru-lambda/src/: bootstrap.rs  request.rs  resource.rs
(+2 files in other folders)
