[package]
name = "witchbooru-lambda"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[dependencies]
anyhow = { version = "1.0.41", default-features = false }
env_logger = { version = "0.8.4", default-features = false }
futures = "0.3.15"
log = "0.4.14"
multipart = { version = "0.18.0", features = ["server"], default-features = false }
netlify_lambda_http = "0.2.0"
reqwest = { version = "0.11.4", features = ["rustls-tls", "stream"], default-features = false }
rusoto_core = { version = "0.47.0", features = ["rustls"], default-features = false }
rusoto_s3 = { version = "0.47.0", features = ["rustls"], default-features = false }
serde = { version = "1.0.126", features = ["derive"], default-features = false }
serde_json = { version = "1.0.64", default-features = false }
tokio = { version = "1.7.1", features = ["rt", "sync", "parking_lot"] }
witchbooru = { path = ".." }
